# routes/utils/user_utils.js
@@ -2,7 +2,6 @@ const DButils = require("./DButils");
 const { getRecipeDetails } = require("./recipes_utils");
 
 // TODO: DONE
-
 async function markAsFavorite(user_id, recipe_id) {
     try {
         await DButils.execQuery(
@@ -14,9 +13,7 @@ async function markAsFavorite(user_id, recipe_id) {
         throw error;
     }
 }
-
 // TODO: DONE
-
 async function getFavoriteRecipes(user_id) {
     try {
         const recipes = await DButils.execQuery(
@@ -32,24 +29,28 @@ async function getFavoriteRecipes(user_id) {
     }
 }
 
-
 // TODO: DONE
 async function markAsWatched(user_id, recipe_id) {
     await DButils.execQuery(
-        `INSERT INTO watched_recipes(user_id, recipe_id) VALUES ('${user_id}', ${recipe_id})`
+        `INSERT INTO watched_recipes (user_id, recipe_id, watched_at)
+     VALUES (${user_id}, ${recipe_id}, NOW())`
     );
 }
 
-
-// TODO: NOT TESTED
+// TODO: DONE
 async function getWatchedRecipes(user_id, limit) {
-    const recipes_id = await DButils.execQuery(
-        `SELECT recipe_id FROM watched_recipes WHERE user_id = ? ORDER BY watched_at DESC LIMIT ?`,
-        [user_id, limit]
-    );
-    return recipes_id;
-}
+    const safe_user_id = parseInt(user_id);
+    const safe_limit = parseInt(limit);
 
+    const query = `
+    SELECT recipe_id 
+    FROM watched_recipes 
+    WHERE user_id = ${safe_user_id} 
+    ORDER BY watched_at DESC 
+    LIMIT ${safe_limit}
+  `;
+    return await DButils.execQuery(query);
+}
 
 function escapeString(str) {
     if (typeof str !== "string") return str; // only escape strings
@@ -71,7 +72,6 @@ async function addRecipe(user_id, title, preparationTime, cuisine, imageUrl, ing
           ${servings}
         )
       `;
-
         await DButils.execQuery(query);
     } catch (error) {
         console.error("Add recipe error:", error);
@@ -79,9 +79,7 @@ async function addRecipe(user_id, title, preparationTime, cuisine, imageUrl, ing
     }
 }
 
-
-
-// TODO: NOT TESTED
+// TODO: DONE
 async function getRecipe(user_id) {
     const recipes = await DButils.execQuery(
         `SELECT recipeId, title, ingredients, instructions, imageUrl, preparationTime, cuisine, servings, createdAt
@@ -91,7 +89,6 @@ async function getRecipe(user_id) {
     return recipes;
 }
 
-
 // TODO: NOT TESTED
 async function getRecipesPreview(recipesIdsArray) {
     return Promise.all(
@@ -99,6 +96,39 @@ async function getRecipesPreview(recipesIdsArray) {
     );
 }
 
+//TODO : DONE
+
+async function addFamilyRecipe(userId, data) {
+    const {
+        title,
+        ownerName,
+        eventOccasion,
+        ingredients,
+        instructions,
+        mainImageUrl,
+        familyImages
+    } = data;
+
+    const query = `
+        INSERT INTO family_recipes (
+            userId, title, ownerName, eventOccasion,
+            ingredients, instructions, mainImageUrl, familyImages
+        ) VALUES (
+                     ${userId},
+                     '${escapeString(title)}',
+                     '${escapeString(ownerName)}',
+                     '${escapeString(eventOccasion)}',
+                     '${escapeString(JSON.stringify(ingredients))}',
+                     '${escapeString(JSON.stringify(instructions))}',
+                     '${escapeString(mainImageUrl)}',
+                     '${escapeString(JSON.stringify(familyImages))}'
+                 )
+    `;
+    const result = await DButils.execQuery(query);
+    return result.insertId;
+}
+
+exports.addFamilyRecipe = addFamilyRecipe;
 exports.getRecipesPreview = getRecipesPreview;
 exports.markAsFavorite = markAsFavorite;
 exports.getFavoriteRecipes = getFavoriteRecipes;
